--- a/pupper-palette/src/styles/globals.css
+++ b/pupper-palette/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Limelight&display=swap");
+
 html,
 body {
   margin: 0;
@@ -6,14 +8,44 @@ body {
 
 :root {
   /* Light Mode Variables */
-  --light-background: #e8f5e9;
-  --light-text: #1b5e20;
-  --light-primary-accent: #ffab91;
-  --light-secondary-accent: #ce93d8;
+  --light-background: #ffffff;
+  --light-text: #333333;
+  --light-primary-accent: #8c86aa;
+  --light-secondary-accent: #ff6f61;
 
   /* Dark Mode Variables */
-  --dark-background: #263238;
-  --dark-text: #eceff1;
-  --dark-primary-accent: #0288d1;
-  --dark-secondary-accent: #ff6e40;
+  --dark-background: #181818;
+  --dark-text: #f5f5f5;
+  --dark-primary-accent: #aa86b8;
+  --dark-secondary-accent: #ff4500;
+}
+
+/* --background-light: #ffffff; */
+/* --primary-light: #5d3dbd;
+--secondary-light: #ff6f61;
+--text-light: #333333;
+--secondary-text-light: #666666;
+--standard-bars-light: #8c86aa;
+--selected-bars-light: #ff4500;
+
+--background-dark: #181818;
+--primary-dark: #9d4edd;
+--secondary-dark: #ff8663;
+--text-dark: #f5f5f5;
+--secondary-text-dark: #cccccc;
+--standard-bars-dark: #aa86b8;
+--selected-bars-dark: #ff4500; */
+
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  color: inherit;
+  font-family: "Limelight", cursive;
+}
+
+svg {
+  width: clamp(15px, 5vw, 25px);
+  width: clamp(15px, 5vw, 25px);
+  color: inherit;
 }
