--- a/pupper-palette/src/styles/components/Header.module.css
+++ b/pupper-palette/src/styles/components/Header.module.css
@@ -11,8 +11,25 @@
   height: 10vh;
   height: 10dvh;
   background-color: inherit;
+  z-index: 1;
 }
 
 .spacer {
   flex: 1;
+}
+
+.menu {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .nav a,
+  .nav svg {
+    display: none;
+  }
+
+  .nav a:nth-child(1),
+  .menu {
+    display: block !important;
+  }
 }
