--- a/pupper-palette/src/styles/globals.css
+++ b/pupper-palette/src/styles/globals.css
@@ -20,22 +20,6 @@ body {
   --dark-secondary-accent: #ff4500;
 }
 
-/* --background-light: #ffffff; */
-/* --primary-light: #5d3dbd;
---secondary-light: #ff6f61;
---text-light: #333333;
---secondary-text-light: #666666;
---standard-bars-light: #8c86aa;
---selected-bars-light: #ff4500;
-
---background-dark: #181818;
---primary-dark: #9d4edd;
---secondary-dark: #ff8663;
---text-dark: #f5f5f5;
---secondary-text-dark: #cccccc;
---standard-bars-dark: #aa86b8;
---selected-bars-dark: #ff4500; */
-
 * {
   box-sizing: border-box;
   text-decoration: none;
@@ -48,4 +32,29 @@ svg {
   width: clamp(15px, 5vw, 25px);
   width: clamp(15px, 5vw, 25px);
   color: inherit;
+}
+
+button {
+  background-color: inherit;
+  outline: none;
+  border: none;
+  padding: 2vh;
+}
+
+.stroked-button-primary {
+  color: var(--primary);
+  border: 1px solid var(--primary);
+  border-radius: 10px;
+}
+
+.stroked-button-secondary {
+  color: var(--accent);
+  border: 1px solid var(--accent);
+  border-radius: 10px;
+  transition: all 0.3s;
+}
+
+.stroked-button-secondary:hover {
+  color: inherit;
+  background-color: var(--accent);
 }
